[package]
authors = ["The Turbofish Team <hello@turbofish.org>"]
default-run = "nomic"
edition = "2021"
name = "nomic"
version = "9.0.0"

[dependencies]
base64 = "0.13.0"
bech32 = {version = "0.9.1"}
bitcoin = {version = "0.29.2", features = ["serde", "rand"]}
bitcoin-script = "0.1.1"
bitcoincore-rpc-async = {package = "bitcoincore-rpc-async2", version = "4.0.2", optional = true}
bytes = "1.2.1"
chrono = "0.4.19"
clap = {version = "3.2.16", features = ["derive"], optional = true}
cosmos-sdk-proto = {version = "0.19.0", optional = true}
csv = {version = "1.1.6", optional = true}
derive_more = "0.99.17"
ed = {git = "https://github.com/nomic-io/ed", rev = "9c0e206ffdb59dacb90f083e004e8080713e6ad8"}
futures = "0.3.21"
hex = "0.4.3"
home = {version = "0.5.5", optional = true}
ibc-proto = {version = "0.32.1", default-features = false, features = [
  "std",
  "borsh",
], optional = true}
ics23 = "0.10.2"
js-sys = {version = "0.3.55"}
lazy_static = "1.4.0"
log = "0.4.17"
orga = {git = "https://github.com/oraichain/orga.git", rev = "b8bd07ad3e26849ba78d87355636e96638a78469", features = [
  "merk-verify",
]}
pretty_env_logger = {git = "https://github.com/seanmonstar/pretty-env-logger", rev = "f9e35b6dbbf06de55222c944c9e1e176ce73b3a7"}
prometheus_exporter = "0.8.5"
prost-types = "0.11.9"
rand = {version = "0.8.5", optional = true}
reqwest = {version = "0.11.16", optional = true, features = ["json"]}
secp256k1 = "0.20.3"
semver = "1.0.18"
serde = "1.0.133"
serde-big-array = "0.4.1"
serde_json = "1.0.74"
sha2 = "0.10.6"
split-iter = "0.1.0"
tempfile = "3"
tendermint-rpc = {version = "=0.32.0", features = [
  "http-client",
], optional = true}
thiserror = "1.0.30"
tiny-bip39 = "0.8.0"
tokio = {version = "1.14.0", features = ["full"], optional = true}
toml = {version = "0.7.2", features = ["parse"]}
toml_edit = "0.13.4"
warp = {version = "0.3.2", optional = true}

[dev-dependencies]
bitcoin_hashes = "0.11.0"
bitcoind = {version = "0.27.0", features = ["22_0"]}
chrono = "0.4.19"
crossbeam-channel = "0.5.8"
curl = "0.4.44"
mutagen = "0.1.2"
serde = "1.0.130"
serde_json = "1.0.68"
serial_test = "2.0.0"
tempfile = "3.6.0"
urlencoding = "2.1.2"

[build-dependencies]
semver = "1.0.18"
toml = {version = "0.7.2", features = ["parse"]}

[features]
<<<<<<<=======
>>>>>>>feat/update_activation_time
HEAD 
default = ["full", "feat-ibc", "legacy-bin"]
default = ["full", "feat-ibc"]
devnet = []
faucet-test = []
feat-ibc = ["orga/feat-ibc"]
full = [
  "bitcoincore-rpc-async",
  "clap",
  "tokio",
  "orga/merk-full",
  "orga/abci",
  "orga/state-sync",
  "csv",
  "warp",
  "rand",
  "reqwest",
  "ibc-proto",
  "tendermint-rpc",
  "cosmos-sdk-proto",
  "home",
]
legacy-bin = []
testnet = []

[profile.release]
overflow-checks = true

[[bin]]
name = "nomic"

[[bin]]
name = "store-diff"

[[bin]]
name = "create-checkpoint"

[[test]]
name = "bitcoin"
required-features = ["devnet", "testnet"]
